# generator-cproject

./: LICENSE  README.md  package-lock.json  package.json
__tests__/: app.js
generators/app/: index.js
generators/app/templates/: <%= projectName %>.c  <%= projectName %>.h  CMakeLists.txt  README.md
generators/app/templates/.devcontainer/: devcontainer.json
generators/app/templates/cmake/: config.cmake.in
generators/app/templates/example/: CMakeLists.txt  main.c
